sol.h

#define sol sol_inline
  typedef long double Float;
  typedef double Float;
  typedef float Float;
  //////////////////////////////////////////////////////////////////////////////
 // Math Constants ////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

/// sol_pi ///
// Description
//   The constant used to equal the value of Pi for Sol's internal calculations.

static const Float sol_pi = ((Float)(3.14159265358979323846));
/// sol_tau ///
// Description
//   A constant which is equal to two times the value of Pi for Sol's internal
//   calculations.

static const Float sol_tau = ((Float)(6.28318530717958647692));
/// sol_g ///
// Description
//   A constant which is equal to the acceleration of gravity in m/s/s.

static const Float sol_g = ((Float)(9.80665));
/// sol_c ///
// Description
//   A constant which is equal to the speed of light in m/s.

static const Float sol_c = ((Float)(299792000));
  //////////////////////////////////////////////////////////////////////////////
 // Struct Type Definitions ///////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

/// Vec2 ///
// Description
//   A type comprised of two floats to represent a 2D vector or position.
// Fields
//   x: Dimension (Float)
//   y: Dimension (Float)
//   f: Dimensions (Float[2])

typedef struct {
  union {
    struct {
      Float x, y;
    };
    Float f[2];
    #if defined(SOL_AVX_64)
      __m128d avx64;
    #elif defined(SOL_AVX_32)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x2_t neon64;
    #elif defined(SOL_NEON_32)
      f32x2_t neon32;
    #endif
  };
} Vec2;
/// Vec3 ///
// Description
//   A type comprised of three floats to represent a 3D vector or position.
// Fields
//   x: Dimension (sol_f)
//   y: Dimension (sol_f)
//   z: Dimension (sol_F)
//   f: Dimensions (Float[3])

typedef struct {
  union {
    struct {
      Float x, y, z;
    };
    Float f[3];
    #if defined(SOL_AVX_64)
      __m256d avx64;
    #elif defined(SOL_AVX_32)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x4_t neon64;
    #elif defined(SOL_NEON_32)
      f32x4_t neon32;
    #endif
  };
} Vec3;
/// Vec4 ///
// Description
//   A type comprised of four floats to represent a quaternion or axis/angle
//   rotation.
// Fields
//   x: Dimension (Float)
//   y: Dimension (Float)
//   z: Dimension (Float)
//   w: Dimension (Float)
//   f: Dimensions (Float[4])

typedef struct {
  union {
    struct {
      Float x, y, z, w;
    };
    Float f[4];
    #if defined(SOL_AVX_64)
      __m256d avx64;
    #elif defined(SOL_AVX)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x4_t neon64;
    #elif defined(SOL_NEON)
      f32x4_t neon32;
    #endif
  };
} Vec4;
/// Ray2 ///
// Description
//   A type comprised of a 2D position and vector pair which represent
//   a ray.
// Fields
//   pos: Position (Vec2)
//   vec: Vector (Vec2)

typedef struct {
  Vec2 pos, vec;
} Ray2;
/// Ray3 ///
// Description
//   A type comprised of a 3D position and vector pair which represent
//   a ray.
// Fields
//   pos: Position (Vec3)
//   vec: Vector (Vec3)

typedef struct {
  Vec3 pos, vec;
} Ray3;
/// Seg2 ///
// Description
//   A type comprised of two 2D positions that represent a line segment.
// Fields
//   orig: Position (Vec2)
//   dest: Position (Vec2)

typedef struct {
  Vec2 orig, dest;
} Seg2;
/// Seg3 ///
// Description
//   A type comprised of two 3D positions that represent a line segment.
// Fields
//   orig: Position (Vec3)
//   dest: Position (Vec3)

typedef struct {
  Vec3 orig, dest;
} Seg3;
/// Mat2 ///
// Description
//   A type comprised of a 2x2 matrix of Float types, or two 2D
//   vectors.
// Fields
//   v: Vector Matrix (Vec2[2])
//   f: Float Matrix (Float[2][2])

typedef union {
  Vec2 v[2];
  Float f[2][2];
} Mat2;
/// Mat3 ///
// Description
//   A type comprised of a 3x3 matrix of Float types, or three
//   3D vectors.
// Fields
//   v: Vector Matrix (Vec3[3])
//   f: Float Matrix (Float[3][3])

typedef union {
  Vec3 v[3];
  Float f[3][3];
} Mat3;
/// Mat4 ///
// Description
//   A type comprised of a 4x4 matrix of Float types, or four
//   4D vectors.
// Fields
//   v: Vector Matrix (Vec4[4])
//   f: Float Matrix (Float[4][4])

typedef union {
  Vec4 v[4];
  Float f[4][4];
} Mat4;
/// Box2 ///
// Description
//   A type comprised of two 2D positions that represent a bounding box.
// Fields
//   lower: Position (Vec2)
//   upper: Position (Vec2)

typedef struct {
  Vec2 lower, upper;
} Box2;
/// Box3 ///
// Description
//   A type comprised of two 3D positions that represent a bounding box.
// Fields
//   upper: Position (Vec3)
//   lower: Position (Vec3)

typedef struct {
  Vec3 lower, upper;
} Box3;
/// Sph2 ///
// Description
//   A type comprised of a 2D position and a radius that represent a bounding
//   sphere.
// Fields
//   pos: Position (Vec2)
//   rad: Radius (Float)

typedef struct {
  Vec2 pos;
  Float rad;
} Sph2;
/// Sph3 ///
// Description
//   A type comprised of a 3D position and a radius that represent a bounding
//   sphere.
// Fields
//   pos: Position (Vec3)
//   rad: Radius (Float)

typedef struct {
  Vec3 pos;
  Float rad;
} Sph3;
  //////////////////////////////////////////////////////////////////////////////
 // Float Function Declarations ///////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Float flt_clamp(Float f, Float lower, Float upper);
Float flt_abs(Float f);
Float flt_pow(Float a, Float b);
Float flt_sqrt(Float f);
Float flt_sin(Float f);
Float flt_cos(Float f);
Float flt_acos(Float f);
  //////////////////////////////////////////////////////////////////////////////
 // Conversion Function Declarations //////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Vec4 cv_axis_quat(Vec4 axis);
Vec4 cv_quat_axis(Vec4 quat);
Vec2 cv_vec3_vec2(Vec3 v);
Vec2 cv_vec4_vec2(Vec4 v);
Vec3 cv_vec2_vec3(Vec2 v, Float z);
Vec3 cv_vec4_vec3(Vec4 v);
Vec4 cv_vec2_vec4(Vec2 v, Float z, Float w);
Vec4 cv_vec3_vec4(Vec3 v, Float w);
Float cv_deg_rad(Float deg);
Float cv_rad_deg(Float rad);
  //////////////////////////////////////////////////////////////////////////////
 // Vec2 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Vec2 vec2_init(Float x, Float y);
Vec2 vec2_initf(Float f);
Vec2 vec2_zero(void);
Vec2 vec2_norm(Vec2 v);
Float vec2_mag(Vec2 v);
bool vec2_eq(Vec2 a, Vec2 b, Float ep);
Vec2 vec2_rot(Vec2 v, Float deg);
Vec2 vec2_rotr(Vec2 v, Float rad);
Vec2 vec2_proj(Vec2 a, Vec2 b);
Vec2 vec2_rej(Vec2 a, Vec2 b);
Float vec2_angle(Vec2 a, Vec2 b);
Float vec2_cross(Vec2 a, Vec2 b);
Float vec2_dot(Vec2 a, Vec2 b);
Float vec2_sum(Vec2 v);
Vec2 vec2_fma(Vec2 a, Vec2 b, Vec2 c);
Vec2 vec2_add(Vec2 a, Vec2 b);
Vec2 vec2_addf(Vec2 v, Float f);
Vec2 vec2_sub(Vec2 a, Vec2 b);
Vec2 vec2_subf(Vec2 v, Float f);
Vec2 vec2_fsub(Float f, Vec2 v);
Vec2 vec2_mul(Vec2 a, Vec2 b);
Vec2 vec2_mulf(Vec2 v, Float f);
Vec2 vec2_div(Vec2 a, Vec2 b);
Vec2 vec2_divf(Vec2 v, Float f);
Vec2 vec2_fdiv(Float f, Vec2 v);
Vec2 vec2_pow(Vec2 a, Vec2 b);
Vec2 vec2_powf(Vec2 v, Float f);
Vec2 vec2_fpow(Float f, Vec2 v);
Vec2 vec2_avg(Vec2 a, Vec2 b);
Vec2 vec2_avgf(Vec2 v, Float f);
void vec2_print(Vec2 v);
  //////////////////////////////////////////////////////////////////////////////
 // Vec3 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Vec3 vec3_init(Float x, Float y, Float z);
Vec3 vec3_initf(Float f);
Vec3 vec3_zero(void);
Vec3 vec3_norm(Vec3 v);
Float vec3_mag(Vec3 v);
bool vec3_eq(Vec3 a, Vec3 b, Float ep);
Vec3 vec3_rot(Vec3 v, Vec4 aa);
Vec3 vec3_rotq(Vec3 v, Vec4 q);
Vec3 vec3_proj(Vec3 a, Vec3 b);
Vec3 vec3_rej(Vec3 a, Vec3 b);
Float vec3_angle(Vec3 a, Vec3 b);
Vec3 vec3_cross(Vec3 a, Vec3 b);
Float vec3_dot(Vec3 a, Vec3 b);