sol.nim

##################################################################
## sol.nim #######################################################
## Description: Nim bindings for the Sol vector library. #########
## Author: David Garland (https://github.com/davidgarland/sol) ###
##################################################################

{.
  passc: "-I."
  compile: "src/sol_flt.c"
  compile: "src/sol_conv.c"
  compile: "src/sol_vec2.c"
  compile: "src/sol_vec3.c"
  compile: "src/sol_vec4.c"
  compile: "src/sol_ray2.c"
  compile: "src/sol_ray3.c"
  compile: "src/sol_seg2.c"
  compile: "src/sol_seg3.c"
  compile: "src/sol_mat2.c"
  compile: "src/sol_mat3.c"
  compile: "src/sol_mat4.c"
  passl: "-lm"
  passc: "-DSOL_NO_FAM"
.}

################################################################################
# Command-Line Options #########################################################
################################################################################

when defined(avx):
    {.passc: "-mavx -mfma -DSOL_AVX".}
elif defined(avx2):
    {.passc: "-mavx2 -mfma -DSOL_AVX -DSOL_AVX2"}
elif defined(neon):
    {.passc: "-mfpu=neon -DSOL_NEON".}
else:
    {.passc: "-DSOL_NO_SIMD".}

################################################################################
# Type Definitions #############################################################
################################################################################

type Float* {.importc: "Float", header: "sol.h".} = cfloat

type Vec2* {.importc: "Vec2", header: "sol.h".} = object
    x*, y*: Float

type Vec3* {.importc: "Vec3", header: "sol.h".} = object
    x*, y*, z*: Float

type Vec4* {.importc: "Vec4", header: "sol.h".} = object
    x*, y*, z*, w*: Float

type Ray2* {.importc: "Ray2", header: "sol.h".} = object
    pos*, vec*: Vec2

type Ray3* {.importc: "Ray3", header: "sol.h".} = object
    pos*, vec*: Vec3

type Seg2* {.importc: "Seg2", header: "sol.h".} = object
    orig*, dest*: Vec2

type Seg3* {.importc: "Seg3", header: "sol.h".} = object
    orig*, dest*: Vec3

type Mat2* {.importc: "Mat2", header: "sol.h".} = object

type Mat3* {.importc: "Mat3", header: "sol.h".} = object

type Mat4* {.importc: "Mat4", header: "sol.h".} = object

type Box2* {.importc: "Box2", header: "sol.h".} = object
  lower*, upper*: Vec2

type Box3* {.importc: "Box3", header: "sol.h".} = object
    lower*, upper*: Vec3

type Sph2* {.importc: "Sph2", header: "sol.h".} = object
    pos*: Vec2
    rad*: Float

type Sph3* {.importc: "Sph3", header: "sol.h".} = object
    pos*: Vec3
    rad*: Float

################################################################################
# Constants ####################################################################
################################################################################

const sol_pi:  Float = 3.14159265358979323846
const sol_tau: Float = 6.28318530717958647692
const sol_g:   Float = 9.80665
const sol_c:   Float = 299792000

################################################################################
# Module Functions #############################################################
################################################################################

proc sol_prefetch*[T](p: ptr[T]; rw, locality: cint) {.importc: "sol_prefetch", header: "sol.h".}

################################################################################
# Float Functions ##############################################################
################################################################################

proc flt_clamp*(f, lower, upper: Float): Float {.importc: "flt_clamp", header: "sol.h".}
proc flt_abs*(f: Float): Float                 {.importc: "flt_abs",   header: "sol.h".}
proc flt_pow*(a, b: Float): Float              {.importc: "flt_pow",   header: "sol.h".}
proc flt_sqrt*(f: Float): Float                {.importc: "flt_sqrt",  header: "sol.h".}
proc flt_sin*(f: Float): Float                 {.importc: "flt_sin",   header: "sol.h".}
proc flt_cos*(f: Float): Float                 {.importc: "flt_cos",   header: "sol.h".}
proc flt_acos*(f: Float): Float                {.importc: "flt_acos",  header: "sol.h".}

################################################################################
# Float Operators ##############################################################
################################################################################

template `+=`*(a: var Float; b: Float) = a = a + b
template `-=`*(a: var Float; b: Float) = a = a - b
template `*=`*(a: var Float; b: Float) = a = a * b
template `/=`*(a: var Float; b: Float) = a = a / b

################################################################################
# Conversion Functions #########################################################
################################################################################

proc cv_axis_quat*(axis: Vec4): Vec4 {.importc: "cv_axis_quat", header: "sol.h".}
proc cv_quat_axis*(quat: Vec4): Vec4 {.importc: "cv_quat_axis", header: "sol.h".}

proc cv_vec3_vec2*(v: Vec3): Vec2              {.importc: "cv_vec3_vec2", header: "sol.h".}
proc cv_vec4_vec2*(v: Vec4): Vec2              {.importc: "cv_vec4_vec2", header: "sol.h".}
proc cv_vec2_vec3*(v: Vec2; z: Float): Vec3    {.importc: "cv_vec2_vec3", header: "sol.h".}
proc cv_vec4_vec3*(v: Vec4): Vec3              {.importc: "cv_vec4_vec3", header: "sol.h".}
proc cv_vec2_vec4*(v: Vec2; z, w: Float): Vec4 {.importc: "cv_vec2_vec4", header: "sol.h".}
proc cv_vec3_vec4*(v: Vec3; w: Float): Vec4    {.importc: "cv_vec3_vec4", header: "sol.h".}

proc cv_deg_rad*(deg: Float): Float {.importc: "cv_deg_rad", header: "sol.h".}
proc cv_rad_deg*(rad: Float): Float {.importc: "cv_rad_deg", header: "sol.h".}

################################################################################
# Vec2 Functions ###############################################################
################################################################################

proc vec2_init*(x, y: Float): Vec2 {.importc: "vec2_init",  header: "sol.h".}
proc vec2_initf*(f: Float): Vec2   {.importc: "vec2_initf", header: "sol.h".}
proc vec2_zero*(): Vec2            {.importc: "vec2_zero",  header: "sol.h".}

proc vec2_norm*(v: Vec2): Vec2             {.importc: "vec2_norm", header: "sol.h".}
proc vec2_mag*(v: Vec2): Float             {.importc: "vec2_mag",  header: "sol.h".}
proc vec2_eq*(a, b: Vec2; ep: Float): bool {.importc: "vec2_eq",   header: "sol.h".}

proc vec2_rot*(v: Vec2; deg: Float): Vec2  {.importc: "vec2_rot",  header: "sol.h".}
proc vec2_rotr*(v: Vec2; rad: Float): Vec2 {.importc: "vec2_rotr", header: "sol.h".}

proc vec2_proj*(a, b: Vec2): Vec2   {.importc: "vec2_proj",  header: "sol.h".}
proc vec2_rej*(a, b: Vec2): Vec2    {.importc: "vec2_rej",   header: "sol.h".}
proc vec2_angle*(a, b: Vec2): Float {.importc: "vec2_angle", header: "sol.h".}
proc vec2_cross*(a, b: Vec2): Float {.importc: "vec2_cross", header: "sol.h".}
proc vec2_dot*(a, b: Vec2): Float   {.importc: "vec2_dot",   header: "sol.h".}

proc vec2_sum*(v: Vec2): Float           {.importc: "vec2_sum",  header: "sol.h".}
proc vec2_fma*(a, b, c: Vec2): Vec2      {.importc: "vec2_fma",  header: "sol.h".}
proc vec2_add*(a, b: Vec2): Vec2         {.importc: "vec2_add",  header: "sol.h".}
proc vec2_addf*(v: Vec2, f: Float): Vec2 {.importc: "vec2_addf", header: "sol.h".}
proc vec2_sub*(a, b: Vec2): Vec2         {.importc: "vec2_sub",  header: "sol.h".}
proc vec2_subf*(v: Vec2, f: Float): Vec2 {.importc: "vec2_subf", header: "sol.h".}
proc vec2_fsub*(f: Float, v: Vec2): Vec2 {.importc: "vec2_fsub", header: "sol.h".}
proc vec2_mul*(a, b: Vec2): Vec2         {.importc: "vec2_mul",  header: "sol.h".}
proc vec2_mulf*(v: Vec2, f: Float): Vec2 {.importc: "vec2_mulf", header: "sol.h".}
proc vec2_div*(a, b: Vec2): Vec2         {.importc: "vec2_div",  header: "sol.h".}
proc vec2_divf*(v: Vec2, f: Float): Vec2 {.importc: "vec2_divf", header: "sol.h".}
proc vec2_fdiv*(f: Float, v: Vec2): Vec2 {.importc: "vec2_fdiv", header: "sol.h".}
proc vec2_pow*(a, b: Vec2): Vec2         {.importc: "vec2_pow",  header: "sol.h".}
proc vec2_powf*(v: Vec2; f: Float): Vec2 {.importc: "vec2_powf", header: "sol.h".}
proc vec2_fpow*(f: Float; v: Vec2): Vec2 {.importc: "vec2_fpow", header: "sol.h".}
proc vec2_avg*(a, b: Vec2): Vec2         {.importc: "vec2_avg",  header: "sol.h".}
proc vec2_avgf*(v: Vec2, f: Float): Vec2 {.importc: "vec2_avgf", header: "sol.h".}

proc vec2_print*(v: Vec2): void {.importc: "vec2_print", header: "sol.h".}

################################################################################
# Vec2 Operators ###############################################################
################################################################################

template vec*(x, y: Float): Vec3 = vec2_init(x, y)

template norm*(v: Vec2): Vec2    = vec2_norm(v)
template mag*(v: Vec2): Float    = vec2_mag(v)
template `==`*(a, b: Vec2): bool = vec2_eq(a, b)

template `rot`*(v: Vec2; deg: Float): Vec2 = vec2_rot(v, deg)
template `rotr`*(v: Vec2; rad: Float): Vec2 = vec2_rotr(v, rad)

template `proj`*(a, b: Vec2): Vec2   = vec2_proj(a, b)
template `rej`*(a, b: Vec2): Vec2    = vec2_rej(a, b)
template `cross`*(a, b: Vec2): Float = vec2_cross(a, b)
template `dot`*(a, b: Vec2): Float   = vec2_dot(a, b)

template `+`*(a, b: Vec2): Vec2        = vec2_add(a, b)
template `+`*(v: Vec2; f: Float): Vec2 = vec2_addf(v, f)
template `+`*(f: Float; v: Vec2): Vec2 = vec2_addf(v, f)
template `-`*(a, b: Vec2): Vec2        = vec2_sub(a, b)
template `-`*(v: Vec2; f: Float): Vec2 = vec2_subf(v, f)
template `-`*(f: Float; v: Vec2): Vec2 = vec2_fsub(f, v)
template `*`*(a, b: Vec2): Vec2        = vec2_mul(a, b)
template `*`*(v: Vec2; f: Float): Vec2 = vec2_mulf(v, f)
template `*`*(f: Float; v: Vec2): Vec2 = vec2_mulf(v, f)
template `/`*(a, b: Vec2): Vec2        = vec2_div(a, b)
template `/`*(v: Vec2; f: Float): Vec2 = vec2_divf(v, f)
template `/`*(f: Float; v: Vec2): Vec2 = vec2_fdiv(f, v)

template `+=`*(a: var Vec2; b: Vec2)  = a = vec2_add(a, b)
template `+=`*(v: var Vec2; f: Float) = v = vec2_addf(v, f)
template `-=`*(a: var Vec2; b: Vec2)  = a = vec2_sub(a, b)
template `-=`*(v: var Vec2; f: Float) = v = vec2_subf(v, f)
template `*=`*(a: var Vec2; b: Vec2)  = a = vec2_mul(a, b)
template `*=`*(v: var Vec2; f: Float) = v = vec2_mulf(v, f)
template `/=`*(a: var Vec2; b: Vec2)  = a = vec2_div(a, b)
template `/=`*(v: var Vec2; f: Float) = v = vec2_divf(v, f)

################################################################################
# Vec3 Functions ###############################################################
################################################################################

proc vec3_init*(x, y, z: Float): Vec3 {.importc: "vec3_init",  header: "sol.h".}
proc vec3_initf*(f: Float): Vec3      {.importc: "vec3_initf", header: "sol.h".}
proc vec3_zero*(): Vec3               {.importc: "vec3_zero",  header: "sol.h".}

proc vec3_norm*(v: Vec3): Vec3            {.importc: "vec3_norm", header: "sol.h".}
proc vec3_mag*(v: Vec3): Float            {.importc: "vec3_mag",  header: "sol.h".}
proc vec3_eq*(a, b: Vec3; f: Float): bool {.importc: "vec3_eq",   header: "sol.h".}
proc vec3_yzx*(v: Vec3): Vec3             {.importc: "vec3_yzx",  header: "sol.h".}

proc vec3_rot*(v: Vec3, aa: Vec4): Vec3 {.importc: "vec3_rot",  header: "sol.h".}
proc vec3_rotq*(v: Vec3, q: Vec4): Vec3 {.importc: "vec3_rotq", header: "sol.h".}

proc vec3_proj*(a, b: Vec3): Vec3   {.importc: "vec3_proj",  header: "sol.h".}
proc vec3_rej*(a, b: Vec3): Vec3    {.importc: "vec3_rej",   header: "sol.h".}
proc vec3_angle*(a, b: Vec3): Float {.importc: "vec3_angle", header: "sol.h".}
proc vec3_cross*(a, b: Vec3): Vec3  {.importc: "vec3_cross", header: "sol.h".}
proc vec3_dot*(a, b: Vec3): Float   {.importc: "vec3_dot",   header: "sol.h".}
